# tdec

./: .env.sample  .gitignore  README.md  llms.txt  pyproject.toml
configs/: add-judges.yaml  bias-judges.yaml  openrouter-cheap.yaml  single-payer-openrouter.yaml  tournament.yaml
configs/debaters/: deepseek-v4-flash-empiricist.yaml  deepseek-v4-flash-narrative.yaml  deepseek-v4-flash-pragmatist.yaml  deepseek-v4-flash-principled.yaml  deepseek-v4-flash.yaml  gpt-5-nano.yaml  llama-4-scout.yaml  local-tinyllama.yaml  mistral-small-4.yaml  qwen-3-5-flash.yaml
configs/judges/: claude-haiku-4-5.yaml  gemini-3-5-flash.yaml  gpt-5-mini.yaml  grok-4-3.yaml  kimi-k2-5.yaml  local-tinyllama.yaml
configs/prompt-sets/: default.yaml  natural.yaml
configs/runs/: bias-ubi-con-first.yaml  bias-ubi-negated-con-first.yaml  bias-ubi-negated-parallel.yaml  bias-ubi-negated-pro-first.yaml  bias-ubi-parallel.yaml  bias-ubi-pro-first.yaml  industrial-policy-strategies.yaml  single-payer.yaml  tournament.yaml  twenty-motions.yaml
docs/: README.md
docs/explanation/: judging-scoring-and-failures.md  tournament-model.md
docs/how-to/: add-judges-after-run.md  control-artifact-verbosity.md  create-openrouter-tournament.md  debug-provider-failures.md  run-bias-experiment.md  run-faster-with-workers.md  view-and-compare-runs.md
docs/reference/: artifacts.md  cli.md  configuration.md
docs/tutorials/: first-tournament.md
scratch/: montgomery-experimental-design.md
tests/: _fakes.py  test_config.py  test_debate.py  test_env.py  test_judging.py  test_models.py  test_tournament.py
(+14 files in other folders)
