[project]
name = "tdec"
version = "0.1.0"
description = "Top Debate Engine Championship"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "langchain-core>=0.3",
    "litellm>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
tdec = "tdec.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tdec"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

